<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_ejercicios">

    <fragment
        android:id="@+id/fragment_ejercicios"
        android:name="com.ppc.ejercicios.EJ.FragmentPrincipal"
        android:label="@string/fragment_ejercicios"
        tools:layout="@layout/fragment_ejercicios">
        <action
            android:id="@+id/action_fragment_ejercicios_to_fragment_ejercicio_1"
            app:destination="@id/fragment_grupo_riesgo" />
        <action
            android:id="@+id/action_fragment_ejercicios_to_fragment_ejercicio_2"
            app:destination="@id/fragment_informacion_pacientes" />
        <action
            android:id="@+id/action_fragment_ejercicios_to_fragment_ejercicio_3"
            app:destination="@id/fragment_carga_datos" />
    </fragment>
    <fragment
        android:id="@+id/fragment_grupo_riesgo"
        android:name="com.ppc.ejercicios.EJ.FragmentGrupoDeRiesgo"
        android:label="@string/fragment_grupo_riesgo"
        tools:layout="@layout/fragment_grupo_de_riesgo">
        <action
            android:id="@+id/action_fragment_ejercicios_to_fragment_calculo_grupo_riesgo"
            app:destination="@id/fragment_calculo_grupo_riesgo" />
    </fragment>
    <fragment
        android:id="@+id/fragment_informacion_pacientes"
        android:name="com.ppc.ejercicios.EJ.FragmentInformacionParaPacientes"
        android:label="@string/fragment_informacion_pacientes"
        tools:layout="@layout/fragment_informacion_pacientes">
    </fragment>
    <fragment
        android:id="@+id/fragment_carga_datos"
        android:name="com.ppc.ejercicios.EJ.FragmentCargaDatos"
        android:label="@string/fragment_carga_datos"
        tools:layout="@layout/fragment_carga_datos">
    </fragment>
    <fragment
        android:id="@+id/fragment_calculo_grupo_riesgo"
        android:name="com.ppc.ejercicios.EJ.FragmentCalculoGrupoRiesgo"
        android:label="@string/fragment_calculo_grupo_riesgo"
        tools:layout="@layout/fragment_calcular_grupo_riesgo">
    </fragment>
</navigation>